--- a/app/apps/aria_downloader/manifest.json
+++ b/app/apps/aria_downloader/manifest.json
@@ -7,7 +7,7 @@
   "entrypoints": {
     "backend_blueprint": "main.py",
     "frontend_template": "template.html",
-    "frontend_script": "main.js"
+    "frontend_script": "app.js"
   },
   "fullscreen": true
 }
