--- a/app/apps/file_editor/manifest.json
+++ b/app/apps/file_editor/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "File Editor",
   "id": "file_editor",
+  "icon_emoji": "📝",
   "version": "0.1.0",
   "description": "A full-page text editor.",
   "author": "Gemini",
