--- a/app/apps/termux_lm/manifest.json
+++ b/app/apps/termux_lm/manifest.json
@@ -1,6 +1,7 @@
 {
   "id": "termux_lm",
   "name": "Termux-LM",
+  "icon_emoji": "🤖",
   "version": "0.1.0",
   "description": "Local and remote LLM management with chat sessions for Termux",
   "entrypoints": {
