--- a/app/apps/terminal/manifest.json
+++ b/app/apps/terminal/manifest.json
@@ -1,6 +1,7 @@
 {
   "id": "terminal",
   "name": "Terminal",
+  "icon_emoji": "</>",
   "version": "0.1.0",
   "description": "Embedded terminals powered by framework shells (dtach).",
   "entrypoints": {
